--- a/release-notes.txt
+++ b/release-notes.txt
@@ -4,4 +4,4 @@ version 1.0
 revision XXX on SVN
 ---------------------------
 
-The very first release of JavaGP, with a few examples of domains and problems.
+The very first release of EmPlan.
